--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ header{
 .center {
     margin: auto;
     width: 60%;
-    /*border: 1px solid #111;*/
+    
     padding: 10px;
     text-align:center;
     
@@ -62,11 +62,18 @@ p{
 .centerservice {
     margin: auto;
     width: 50%;
-    /*border: 1px solid #111;*/
+    border: 1px solid #111;
     padding: 10px;
     text-align:center;
     align-items: center;
     
+}
+figcaption {
+  
+  color:teal;
+  font-style: bold;
+  padding: 0px;
+  text-align: center;
 }
 .active {
     color: teal;
@@ -234,4 +241,84 @@ p{
       margin-top: 10px;
     }
   }
+  #services-list
+  {
+    overflow:hidden
+  }
+  .service
+  {
+    width:156px;
+    float:left;
+    margin:0 7px 7px 0
+  }
+  .service a
+  {
+    display:block
+  }
+   .service a img
+  {
+    display:block;
+    width:100%
+  }
+  
+  .item{
+    width:200px;
+    text-align:center;
+    display:block;
+    background-color: transparent;
+    border: 1px solid transparent;
+    margin-right: 10px;
+    margin-bottom: 1px;
+    float:left;
+  }
+  
+  #index-gallery{
+    width:465px;
+  }
+  .container{
+    width: 50%;
+    margin: auto;
+    overflow: hidden;
+    
+    margin-top: 20px;
+}
+
+.container ul{
+    padding: 0px;
+    margin: 0px;
+}
+
+
+.container ul li{
+    float:left;
+    list-style: none;
+    top:60%;
+    width:20%;
+    height:auto;
+    
+    margin :10px 0px 10px 30px; 
+    
+    box-sizing: border-box;
+}
+.container ul li:hover{
+    opacity: 0.8;
+}
+
+.container ul li .bottom{
+    width: 100%;
+    height:50px;
+    line-height: 1.3;
+        
+    text-align: center;
+    color:teal;
+    font-size: 20px;
+   
+}
+
+@media screen and (max-width:1250px){
+    .container ul li{
+        width:40%;
+        margin-left: 40px;
+         
+    }
 
